Polish for v0.2.0 * Remove Remember Me checkbox altogether (doesn't work with localStorage) * Fix login on mobile skewed to the right - centered now

--- a/pages/Login/login.module.css
+++ b/pages/Login/login.module.css
@@ -47,11 +47,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
   flex-direction: column;
   margin-top: 2rem;
   max-width: 500px;
-  width: 80%;
+  width: 90%;
 }
 
 .grid h1 {
@@ -98,12 +97,6 @@
   margin: 0;
   font-size: 1.25rem;
   line-height: 1.5;
-}
-
-@media (max-width: 600px) {
-  .form {
-    padding: 0;
-  }
 }
 
 .form {
